[package]
name = "real-world-testing-rustconf2024"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
